--- a/get-started.html
+++ b/get-started.html
@@ -1,3 +1,6 @@
+<h1>Exemplo de titulos</h1>
+
+
 <h1>Título 1</h1>
 
 <h2>Título 2</h2>
@@ -9,3 +12,38 @@
 <h5>Título 5</h5>
 
 <h6>Título 6</h6>
+
+
+<h1>Exemplo de parágrafo</h1>
+<p>Parágrafo</p>
+
+
+<h1>Exemplo de link</h1>
+<a href="https://www.exemplo.com">link</a>
+
+
+<h1>Exemplo de imagem</h1>
+<img src="caminho_da_imagem.jpg" alt="Descrição da imagem">
+
+
+<h1>Exemplo de lista não ordenada</h1>
+<ul>
+    <li>Lista item 1</li>
+    <li>Lista item 2</li>
+    <li>Lista item 3</li>
+</ul>
+
+
+<h1>Exemplo de lista ordenada de itens</h1>
+<ol>
+    <li>Primeiro item</li>
+    <li>Segundo item</li>
+    <li>Terceiro item</li>
+</ol>
+
+
+<h1>Exemplo de div</h1>
+<div>
+    <h3>Título da Divisão</h3>
+    <p>Conteúdo da divisão.</p>
+</div>
