feat: get-started.html structure 2023-06-18 01:2

--- a/get-started.html
+++ b/get-started.html
@@ -1,49 +1,79 @@
-<h1>Exemplo de titulos</h1>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <title>Título da Página</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Descrição da página">
+</head>
+
+<body>
+    <header>
+        <p>Header</p>
+    </header>
 
 
-<h1>Título 1</h1>
+    <main>
+        <p>Main</p>
+        <section>
+            <h1>Exemplo de titulos</h1>
 
-<h2>Título 2</h2>
+            <h1>Título 1</h1>
 
-<h3>Título 3</h3>
+            <h2>Título 2</h2>
 
-<h4>Título 4</h4>
+            <h3>Título 3</h3>
 
-<h5>Título 5</h5>
+            <h4>Título 4</h4>
 
-<h6>Título 6</h6>
+            <h5>Título 5</h5>
 
+            <h6>Título 6</h6>
 
-<h1>Exemplo de parágrafo</h1>
-<p>Parágrafo</p>
-
-
-<h1>Exemplo de link</h1>
-<a href="https://www.exemplo.com">link</a>
-
-
-<h1>Exemplo de imagem</h1>
-<img src="caminho_da_imagem.jpg" alt="Descrição da imagem">
+        </section>
 
 
-<h1>Exemplo de lista não ordenada</h1>
-<ul>
-    <li>Lista item 1</li>
-    <li>Lista item 2</li>
-    <li>Lista item 3</li>
-</ul>
+        <section>
+            <h1>Exemplo de parágrafo</h1>
+            <p>Parágrafo</p>
+        </section>
 
+        <section>
+            <h1>Exemplo de link</h1>
+            <a href="https://www.exemplo.com">link</a>
 
-<h1>Exemplo de lista ordenada de itens</h1>
-<ol>
-    <li>Primeiro item</li>
-    <li>Segundo item</li>
-    <li>Terceiro item</li>
-</ol>
+        <section>
+            <h1>Exemplo de imagem</h1>
+            <img src="caminho_da_imagem.jpg" alt="Descrição da imagem">
+        </section>
 
+        <section>
+            <h1>Exemplo de lista não ordenada</h1>
+            <ul>
+                <li>Lista item 1</li>
+                <li>Lista item 2</li>
+                <li>Lista item 3</li>
+            </ul>
+        </section>
 
-<h1>Exemplo de div</h1>
-<div>
-    <h3>Título da Divisão</h3>
-    <p>Conteúdo da divisão.</p>
-</div>
+        <section>
+            <h1>Exemplo de lista ordenada de itens</h1>
+            <ol>
+                <li>Primeiro item</li>
+                <li>Segundo item</li>
+                <li>Terceiro item</li>
+            </ol>
+        </section>
+
+        <section>
+            <h1>Exemplo de div</h1>
+            <div>
+                <h3>Título da Divisão</h3>
+                <p>Conteúdo da divisão.</p>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>Footer</p>
+    </footer>
+</body>
+</html>
